fix: fix flex wrap in Firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -123,6 +123,9 @@ section.content {
 
 .form-group {
   flex: 1;
+  width: 100%;
+  min-width: 220px;
+  max-width: 300px;
 }
 
 .form-group label {
@@ -143,7 +146,7 @@ section.content {
   border-radius: 4px;
   border: 2px solid #e5e7eb;
   padding: 0.5em;
-  width: clamp(220px, 100%, 300px);
+  width: 100%;
 }
 
 .form-group input:focus {
